--- a/resume.html
+++ b/resume.html
@@ -117,7 +117,7 @@
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-secondary fw-bolder mb-2">2005 - 2018</div>
                                                 <div class="mb-2">
-                                                    <div class="small fw-bolder">ULA</div>
+                                                    <div class="small fw-bolder">Seoul</div>
                                                     <div class="small text-muted">Los Angeles, CA</div>
                                                 </div>
                                                 <div class="fst-italic">
