--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 007</h2>
+                                            <h2 class="fw-bolder">Project Name x</h2>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
                                         </div>
                                         <img class="img-fluid" src="assets/gg.jpeg" alt="..." />
